--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,7 +44,9 @@ jobs:
           path: project-repo
       - name: Dbt checks
         run: |
-          cd ${{github.workspace}}/transformation/transformation_nsw_doe
+          echo pwd
+          echo ${{ github.workspace }}
+          cd ${{ github.workspace }}/transformation/transformation_nsw_doe
           dbt deps
       - name: Python Executable Deploy
         if: steps.prerun.outputs.result == 'pex-deploy'
