--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -70,8 +70,9 @@ jobs:
         # pip install . --upgrade --upgrade-strategy eager
 
         run: |
+          python3 -m pip install uv
           cd ./${{ env.DAGSTER_PROJECT_NAME }}
-          pip install .
+          uv pip install .
           dagster-dbt project prepare-for-deployment --file ${{ env.DAGSTER_PROJECT_NAME }}/project.py
           # The cli command below can be used to manage syncing the prod manifest to branches if state_path is set on the DbtProject
           # dagster-cloud ci dagster-dbt project manage-state --file ${{ env.DAGSTER_PROJECT_NAME }}/project.py
