--- a/requirements.txt
+++ b/requirements.txt
@@ -47,6 +47,12 @@ black==24.4.2
     # via pandera
 bleach==6.1.0
     # via nbconvert
+boto3==1.34.117
+    # via dagster-aws
+botocore==1.34.117
+    # via
+    #   boto3
+    #   s3transfer
 cachetools==5.3.3
     # via google-auth
 certifi==2024.2.2
@@ -112,6 +118,7 @@ dacite==1.8.1
     # via ydata-profiling
 dagster==1.7.6
     # via
+    #   dagster-aws
     #   dagster-cloud
     #   dagster-cloud-cli
     #   dagster-dbt
@@ -123,6 +130,7 @@ dagster==1.7.6
     #   dagster-openai
     #   dagster-webserver
     #   dagstermill
+dagster-aws==0.23.6
 dagster-cloud==1.7.6
 dagster-cloud-cli==1.7.6
     # via dagster-cloud
@@ -343,6 +351,10 @@ jinja2==3.1.4
     #   ydata-profiling
 jinja2-simple-tags==0.6.1
     # via sqlfluff-templater-dbt
+jmespath==1.0.1
+    # via
+    #   boto3
+    #   botocore
 joblib==1.4.2
     # via
     #   phik
@@ -530,6 +542,7 @@ packaging==23.2
     # via
     #   black
     #   dagster
+    #   dagster-aws
     #   dagster-cloud-cli
     #   dagster-dbt
     #   dagstermill
@@ -675,6 +688,7 @@ pytest==8.2.1
     # via sqlfluff
 python-dateutil==2.8.2
     # via
+    #   botocore
     #   croniter
     #   dagster
     #   dbt-semantic-interfaces
@@ -745,6 +759,7 @@ regex==2024.5.15
 requests==2.32.2
     # via
     #   dagster
+    #   dagster-aws
     #   dagster-cloud
     #   dagster-cloud-cli
     #   dagster-dbt
@@ -794,6 +809,8 @@ ruamel-yaml==0.17.40
 ruamel-yaml-clib==0.2.8
     # via ruamel-yaml
 ruff==0.4.4
+s3transfer==0.10.1
+    # via boto3
 scikit-learn==1.5.0
 scipy==1.11.4
     # via
@@ -984,6 +1001,7 @@ uritemplate==4.1.1
     #   google-api-python-client
 urllib3==1.26.18
     # via
+    #   botocore
     #   dbt-core
     #   requests
 uvicorn==0.29.0
